Update index.html resume and copyright date

--- a/index.html
+++ b/index.html
@@ -53,29 +53,35 @@
 
 				<summary>
 					<p>
-						Below, find the professional resume of web developer, Matthew
-						Waldrop. Matt has roughly eight years of dedicated web development
-						experience primarily in HTML, CSS/SCSS, JavaScript, and PHP. He's
-						also worked on multiple WordPress sites and two Drupal sites all of
-						which are no longer extant. You will find below, however, links to a
-						number of websites on which he contributed his expertise.
+						I'm a front-end developer with over a decade of experience building responsive, accessible, and high-performance web interfaces using modern JavaScript frameworks like Vue.js, along with deep expertise in HTML, CSS/SCSS, and design systems. I specialize in turning complex design concepts into intuitive, scalable user experiences—collaborating across remote teams to ship clean, maintainable code that meets both business goals and user needs. With a background spanning enterprise CMS platforms, e-commerce, and digital transformation projects, I bring a user-first mindset, strong communication skills, and a passion for continuous learning to every build.
 					</p>
-
-					<p>Currently, he's seeking a web development role.</p>
 				</summary>
 
 				<h2>SKILLS</h2>
 				<p>
-					<strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Foundation,
-					JavaScript/ES6, PHP, MySQL/MongoDB, Vue, Node.js, npm
+					<strong>Frontend Development:</strong> Vue.js, JavaScript (ES6+), 
+					TypeScript (basic), HTML5, CSS3, SCSS, Responsive Design, 
+					Component-Based Architecture, Scoped CSS, CSS Grid & Flexbox
 				</p>
 				<p>
-					<strong>Tools:</strong> Git/GitHub, VSCode, WordPress/Shopify,
-					Photoshop/Illustrator/InDesign, XD/Sketch
+					<strong>UI/UX & Design Integration:</strong> Figma, Adobe XD, 
+					Accessibility (WCAG), Design Systems, Pixel-Perfect Implementation, 
+					User-Centered Design, Wireframing, Visual Hierarchies
 				</p>
 				<p>
-					<strong>Soft Skills:</strong> UI/UX interviewing/planning, agile
-					methodology, QA, page and image optimization, accessibility/WCAG
+					<strong>Performance & Debugging:</strong> Chrome DevTools, 
+					Performance Profiling, Cross-Browser Testing, Layout Debugging, 
+					Responsive QA, Scoped Styling Strategies
+				</p>
+				<p>
+					<strong>Tooling & Workflow:</strong> Vite, Git & GitHub, REST 
+					APIs (Fetch), npm, WordPress, CMS Integration, Agile/Scrum, 
+					Remote Collaboration
+				</p>
+				<p>
+					<strong>Soft Skills:</strong> Clear Communication, Peer Code 
+					Review, Design&ndash;Dev Handoff, Mentorship, Problem Solving, 
+					Rapid Prototyping, Adaptability in Remote Teams
 				</p>
 
 				<h2>EXPERIENCE, Web Development</h2>
@@ -87,22 +93,25 @@
 				</p>
 				<ul>
 					<li>
-						Provide HTML, CSS, JavaScript, and Mustache support for premium
-						web-development and CMS hosting clientele including Destination
-						Marketing Organizations of Las Vegas, New York State, Atlantic City,
-						Palm Springs, and Irving, Texas.
+						Built and maintained responsive, accessible front-end interfaces 
+						for a multi-tenant CMS platform using Vue.js, JavaScript (ES6+), 
+						and SCSS
 					</li>
 					<li>
-						Perform updates and searches on the backend databases of various
-						clients via MongoDB and JavaScript.
+						Developed reusable UI components and contributed to internal 
+						design systems supporting enterprise tourism and destination clients
 					</li>
 					<li>
-						Troubleshoot issues via chat with entire development staff including
-						production and support.
+						Collaborated with remote designers and back-end teams to translate 
+						complex requirements into performant, user-centered web experiences
 					</li>
 					<li>
-						Document all time and pertinent activities via in-house ticket
-						management system.
+						Led debugging efforts using DevTools to resolve performance issues, 
+						layout inconsistencies, and accessibility gaps
+					</li>
+					<li>
+						Managed Git-based workflows and QA processes to ensure scalable, 
+						consistent delivery across dozens of high-traffic websites
 					</li>
 				</ul>
 				<p>
@@ -140,23 +149,24 @@
 				</p>
 				<ul>
 					<li>
-						Translated technical jargon and formatting into HTML and inline CSS
-						styling for entry into limited CMS text box formatting.
+						Transformed legacy HTML/CSS content into responsive, accessible 
+						layouts aligned with new design architecture for global markets
 					</li>
 					<li>
-						Partnered with content manager to translate traditional departmental
-						marketing into consistent, succinct SEO-optimized copy.
+						Supported multilingual site rollouts (English, Canadian, and 
+						Australian markets) by collaborating with localization and content teams
 					</li>
 					<li>
 						Worked with area specialists to understand processes and legal needs
 						to translate to instruction for data entry team.
 					</li>
-					<li>Testing and QA.</li>
 					<li>
-						Company-wide content support and auditing for teams migrating their
-						own content.
+						Partnered with UX and visual design teams to implement clean, 
+						mobile-friendly structures for the redesigned corporate site
+					<li>
+						Maintained brand consistency and accessibility standards across 
+						thousands of lines of static and dynamic content
 					</li>
-					<li>Liaison for Australia/New Zealand team content team.</li>
 				</ul>
 				<p>
 					<a
@@ -168,35 +178,27 @@
 					>
 				</p>
 
-				<h3>WordPress &amp; Zen Cart [PHP] Developer &amp; Marketer</h3>
+				<h3>PHP WordPress &amp; Zen Cart Developer &amp; Marketer</h3>
 				<p>
 					<strong>FiberWild! A Unique Knit Shop, Galena IL</strong>
 					<em>December 2014&ndash;November 2016</em>
 				</p>
 				<ul>
 					<li>
-						Built custom WordPress theme to mimic existing Zen Cart landing page
-						template.
+						Developed and maintained custom WordPress themes and Zen Cart 
+						templates using SCSS and PHP
 					</li>
 					<li>
-						Customized WordPress WYSIWYG editor so content developers could
-						populate landing pages with minimal code knowledge.
+						Created landing pages and promotional layouts for e-commerce 
+						campaigns and designer collaborations
 					</li>
 					<li>
-						Built weekly HTML/CSS landing pages with dense technical
-						specifications and wrote marketing copy for craft projects.
+						Coordinated directly with internal marketing and inventory teams 
+						to align web experience with sales initiatives
 					</li>
 					<li>
-						Advised UX and accessibility implementation for new promotional
-						WordPress site and existing Zen Cart catalog site.
-					</li>
-					<li>
-						Met monthly with marketing team to develop promotion (email, landing
-						page, and social media) and inventory plan.
-					</li>
-					<li>
-						Led outreach to designers and vendors for event development and
-						coordination.
+						Applied mobile-first principles and performance optimizations to 
+						improve speed and usability across devices
 					</li>
 				</ul>
 				<p>
@@ -233,23 +235,34 @@
 				</p>
 				<ul>
 					<li>
-						Sole UI/UX developer on PHP catalog website and three WordPress
-						blogs.
-					</li>
-					<li>Co-write copy for and build weekly HTML email newsletter.</li>
-					<li>
-						Build web and brick-and-mortar retail yarn shop into top 2%
-						nationally of similar reporting businesses in the sector.
+						Sole UI/UX designer and developer for a custom PHP catalog 
+						and three WordPress blogs, owning layout, theme architecture, 
+						and user experience
 					</li>
 					<li>
-						Design brand, instructional program, marketing and social media
-						programs, and in-store and online events.
+						Designed and coded weekly HTML email campaigns, co-authoring 
+						marketing copy and optimizing for mobile responsiveness and 
+						conversion
 					</li>
 					<li>
-						Hire, train, manage, educate, and coach staff of twelve and twelve
-						independent instructors.
+						Scaled digital and physical retail presence to rank in the 
+						top 2% of U.S. yarn shops by sales volume and industry reporting 
+						benchmarks
 					</li>
-					<li>Plan, buy, and merchandise inventory.</li>
+					<li>
+						Led brand identity, instructional programming, and digital 
+						marketing strategy across web, social, and in-person engagement 
+						channels
+					</li>
+					<li>
+						Recruited, trained, and managed a team of 12 employees and 12 
+						contract instructors, fostering a collaborative, customer-first 
+						culture
+					</li>
+					<li>
+						Oversaw product curation, merchandising strategy, and seasonal 
+						buying across online and brick-and-mortar channels
+					</li>
 				</ul>
 				<p>
 					<a href="https://threadbear.mattwaldrop.com" target="external"
@@ -269,16 +282,17 @@
 				</p>
 				<ul>
 					<li>
-						Lead front-end development and design information architecture on
-						worldwide site redesign.
+						Led front-end development and site architecture for enterprise-level 
+						financial tools and content portals
 					</li>
-					<li>UX and accessibility expert to corporate web team.</li>
 					<li>
-						Execute stakeholder interviews for developing workflows and forms.
+						Designed and implemented HTML/CSS templates for core digital 
+						initiatives including stakeholder-driven microsites
 					</li>
-					<li>Collaborate with graphic designer on UI.</li>
-					<li>Mentor two junior developers in HTML and CSS best practices.</li>
-					<li>Develop documentation and commenting style and protocol.</li>
+					<li>
+						Conducted usability testing and refined interface strategies based 
+						on stakeholder feedback and business goals
+					</li>
 				</ul>
 				<p>
 					<a
@@ -318,12 +332,11 @@
 
 				<h2>EDUCATION</h2>
 
-				<h3>Senior Standing, Computer Science BS Program</h3>
-				<strong>LaGrange College, LaGrange GA</strong> <em>1994&ndash;1998</em>
-				<p>Withdrew under heavy Y2K recruitment</p>
+				<h3>B. S. Computer Science (Senior Standing)</h3>
+				<strong>LaGrange College, LaGrange GA</strong> <em>September 1994&ndash;May 1998</em>
 				<p>
-					<strong>Awards:</strong> Outstanding CS Freshman, Outstanding CS
-					Sophomore, Outstanding CS Major (first time awarded to a Junior)
+					Completed advanced coursework in computer science before leaving early under 
+					industry recruitment during the Y2K hiring surge.
 				</p>
 			</div>
 		</main>
