Remove reference page, add colophon, update README

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 					<li><a href="/index.html">Resume</a></li>
 					<li><a href="/projects.html">Projects</a></li>
 					<li>About</li>
-					<li><a href="/reference.html">Reference</a></li>
+					<li><a href="/colophon.html">Colophon</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -55,7 +55,7 @@
 				Columbus, Indiana &mdash; Lansing, Michigan &mdash; Raleigh, Charlotte,
 				and Greensboro, North Carolina
 			</p>
-			<p><strong>Current city:</strong> Williamsburg, Virginia</p>
+			<p><strong>Current city:</strong> Greensboro, North Carolina</p>
 
 			<h2>Education</h2>
 
