--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li>Resume</li>
 					<li><a href="/projects.html">Projects</a></li>
 					<li><a href="/about.html">About</a></li>
-					<li><a href="/reference.html">Reference</a></li>
+					<li><a href="/colophon.html">Colophon</a></li>
 				</ul>
 			</nav>
 		</header>
