--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 					<li><a href="/index.html">Resume</a></li>
 					<li>Projects</li>
 					<li><a href="/about.html">About</a></li>
-					<li><a href="/reference.html">Reference</a></li>
+					<li><a href="/colophon.html">Colophon</a></li>
 				</ul>
 			</nav>
 		</header>
