Add Kroger, Holt MI experience

--- a/index.html
+++ b/index.html
@@ -53,35 +53,45 @@
 
 				<summary>
 					<p>
-						I'm a front-end developer with over a decade of experience building responsive, accessible, and high-performance web interfaces using modern JavaScript frameworks like Vue.js, along with deep expertise in HTML, CSS/SCSS, and design systems. I specialize in turning complex design concepts into intuitive, scalable user experiences—collaborating across remote teams to ship clean, maintainable code that meets both business goals and user needs. With a background spanning enterprise CMS platforms, e-commerce, and digital transformation projects, I bring a user-first mindset, strong communication skills, and a passion for continuous learning to every build.
+						I'm a front-end developer with over a decade of experience building
+						responsive, accessible, and high-performance web interfaces using
+						modern JavaScript frameworks like Vue.js, along with deep expertise
+						in HTML, CSS/SCSS, and design systems. I specialize in turning
+						complex design concepts into intuitive, scalable user
+						experiences—collaborating across remote teams to ship clean,
+						maintainable code that meets both business goals and user needs.
+						With a background spanning enterprise CMS platforms, e-commerce, and
+						digital transformation projects, I bring a user-first mindset,
+						strong communication skills, and a passion for continuous learning
+						to every build.
 					</p>
 				</summary>
 
 				<h2>SKILLS</h2>
 				<p>
-					<strong>Frontend Development:</strong> Vue.js, JavaScript (ES6+), 
-					TypeScript (basic), HTML5, CSS3, SCSS, Responsive Design, 
+					<strong>Frontend Development:</strong> Vue.js, JavaScript (ES6+),
+					TypeScript (basic), HTML5, CSS3, SCSS, Responsive Design,
 					Component-Based Architecture, Scoped CSS, CSS Grid & Flexbox
 				</p>
 				<p>
-					<strong>UI/UX & Design Integration:</strong> Figma, Adobe XD, 
-					Accessibility (WCAG), Design Systems, Pixel-Perfect Implementation, 
+					<strong>UI/UX & Design Integration:</strong> Figma, Adobe XD,
+					Accessibility (WCAG), Design Systems, Pixel-Perfect Implementation,
 					User-Centered Design, Wireframing, Visual Hierarchies
 				</p>
 				<p>
-					<strong>Performance & Debugging:</strong> Chrome DevTools, 
-					Performance Profiling, Cross-Browser Testing, Layout Debugging, 
-					Responsive QA, Scoped Styling Strategies
+					<strong>Performance & Debugging:</strong> Chrome DevTools, Performance
+					Profiling, Cross-Browser Testing, Layout Debugging, Responsive QA,
+					Scoped Styling Strategies
 				</p>
 				<p>
-					<strong>Tooling & Workflow:</strong> Vite, Git & GitHub, REST 
-					APIs (Fetch), npm, WordPress, CMS Integration, Agile/Scrum, 
-					Remote Collaboration
+					<strong>Tooling & Workflow:</strong> Vite, Git & GitHub, REST APIs
+					(Fetch), npm, WordPress, CMS Integration, Agile/Scrum, Remote
+					Collaboration
 				</p>
 				<p>
-					<strong>Soft Skills:</strong> Clear Communication, Peer Code 
-					Review, Design&ndash;Dev Handoff, Mentorship, Problem Solving, 
-					Rapid Prototyping, Adaptability in Remote Teams
+					<strong>Soft Skills:</strong> Clear Communication, Peer Code Review,
+					Design&ndash;Dev Handoff, Mentorship, Problem Solving, Rapid
+					Prototyping, Adaptability in Remote Teams
 				</p>
 
 				<h2>EXPERIENCE, Web Development</h2>
@@ -93,24 +103,24 @@
 				</p>
 				<ul>
 					<li>
-						Built and maintained responsive, accessible front-end interfaces 
-						for a multi-tenant CMS platform using Vue.js, JavaScript (ES6+), 
-						and SCSS
+						Built and maintained responsive, accessible front-end interfaces for
+						a multi-tenant CMS platform using Vue.js, JavaScript (ES6+), and
+						SCSS
 					</li>
 					<li>
-						Developed reusable UI components and contributed to internal 
-						design systems supporting enterprise tourism and destination clients
+						Developed reusable UI components and contributed to internal design
+						systems supporting enterprise tourism and destination clients
 					</li>
 					<li>
-						Collaborated with remote designers and back-end teams to translate 
+						Collaborated with remote designers and back-end teams to translate
 						complex requirements into performant, user-centered web experiences
 					</li>
 					<li>
-						Led debugging efforts using DevTools to resolve performance issues, 
+						Led debugging efforts using DevTools to resolve performance issues,
 						layout inconsistencies, and accessibility gaps
 					</li>
 					<li>
-						Managed Git-based workflows and QA processes to ensure scalable, 
+						Managed Git-based workflows and QA processes to ensure scalable,
 						consistent delivery across dozens of high-traffic websites
 					</li>
 				</ul>
@@ -149,22 +159,25 @@
 				</p>
 				<ul>
 					<li>
-						Transformed legacy HTML/CSS content into responsive, accessible 
+						Transformed legacy HTML/CSS content into responsive, accessible
 						layouts aligned with new design architecture for global markets
 					</li>
 					<li>
-						Supported multilingual site rollouts (English, Canadian, and 
-						Australian markets) by collaborating with localization and content teams
+						Supported multilingual site rollouts (English, Canadian, and
+						Australian markets) by collaborating with localization and content
+						teams
 					</li>
 					<li>
 						Worked with area specialists to understand processes and legal needs
 						to translate to instruction for data entry team.
 					</li>
 					<li>
-						Partnered with UX and visual design teams to implement clean, 
+						Partnered with UX and visual design teams to implement clean,
 						mobile-friendly structures for the redesigned corporate site
+					</li>
+
 					<li>
-						Maintained brand consistency and accessibility standards across 
+						Maintained brand consistency and accessibility standards across
 						thousands of lines of static and dynamic content
 					</li>
 				</ul>
@@ -185,19 +198,19 @@
 				</p>
 				<ul>
 					<li>
-						Developed and maintained custom WordPress themes and Zen Cart 
+						Developed and maintained custom WordPress themes and Zen Cart
 						templates using SCSS and PHP
 					</li>
 					<li>
-						Created landing pages and promotional layouts for e-commerce 
+						Created landing pages and promotional layouts for e-commerce
 						campaigns and designer collaborations
 					</li>
 					<li>
-						Coordinated directly with internal marketing and inventory teams 
-						to align web experience with sales initiatives
+						Coordinated directly with internal marketing and inventory teams to
+						align web experience with sales initiatives
 					</li>
 					<li>
-						Applied mobile-first principles and performance optimizations to 
+						Applied mobile-first principles and performance optimizations to
 						improve speed and usability across devices
 					</li>
 				</ul>
@@ -235,32 +248,30 @@
 				</p>
 				<ul>
 					<li>
-						Sole UI/UX designer and developer for a custom PHP catalog 
-						and three WordPress blogs, owning layout, theme architecture, 
-						and user experience
+						Sole UI/UX designer and developer for a custom PHP catalog and three
+						WordPress blogs, owning layout, theme architecture, and user
+						experience
 					</li>
 					<li>
-						Designed and coded weekly HTML email campaigns, co-authoring 
-						marketing copy and optimizing for mobile responsiveness and 
+						Designed and coded weekly HTML email campaigns, co-authoring
+						marketing copy and optimizing for mobile responsiveness and
 						conversion
 					</li>
 					<li>
-						Scaled digital and physical retail presence to rank in the 
-						top 2% of U.S. yarn shops by sales volume and industry reporting 
-						benchmarks
+						Scaled digital and physical retail presence to rank in the top 2% of
+						U.S. yarn shops by sales volume and industry reporting benchmarks
 					</li>
 					<li>
-						Led brand identity, instructional programming, and digital 
-						marketing strategy across web, social, and in-person engagement 
-						channels
+						Led brand identity, instructional programming, and digital marketing
+						strategy across web, social, and in-person engagement channels
 					</li>
 					<li>
-						Recruited, trained, and managed a team of 12 employees and 12 
-						contract instructors, fostering a collaborative, customer-first 
+						Recruited, trained, and managed a team of 12 employees and 12
+						contract instructors, fostering a collaborative, customer-first
 						culture
 					</li>
 					<li>
-						Oversaw product curation, merchandising strategy, and seasonal 
+						Oversaw product curation, merchandising strategy, and seasonal
 						buying across online and brick-and-mortar channels
 					</li>
 				</ul>
@@ -282,15 +293,15 @@
 				</p>
 				<ul>
 					<li>
-						Led front-end development and site architecture for enterprise-level 
+						Led front-end development and site architecture for enterprise-level
 						financial tools and content portals
 					</li>
 					<li>
-						Designed and implemented HTML/CSS templates for core digital 
+						Designed and implemented HTML/CSS templates for core digital
 						initiatives including stakeholder-driven microsites
 					</li>
 					<li>
-						Conducted usability testing and refined interface strategies based 
+						Conducted usability testing and refined interface strategies based
 						on stakeholder feedback and business goals
 					</li>
 				</ul>
@@ -308,6 +319,7 @@
 
 				<h3>Meat Clerk</h3>
 				<strong>Harris Teeter, Williamsburg VA</strong>
+				<strong>Kroger, Holt, MI</strong>
 				<em>April 2025&ndash;Present</em>
 
 				<h3>Store Manager</h3>
@@ -333,10 +345,11 @@
 				<h2>EDUCATION</h2>
 
 				<h3>B. S. Computer Science (Senior Standing)</h3>
-				<strong>LaGrange College, LaGrange GA</strong> <em>September 1994&ndash;May 1998</em>
+				<strong>LaGrange College, LaGrange GA</strong>
+				<em>September 1994&ndash;May 1998</em>
 				<p>
-					Completed advanced coursework in computer science before leaving early under 
-					industry recruitment during the Y2K hiring surge.
+					Completed advanced coursework in computer science before leaving early
+					under industry recruitment during the Y2K hiring surge.
 				</p>
 			</div>
 		</main>
