Format experience gaps

--- a/index.html
+++ b/index.html
@@ -318,20 +318,21 @@
 				<h2>EXPERIENCE, Gaps</h2>
 
 				<h3>Meat Clerk</h3>
-				<strong>Harris Teeter, Williamsburg VA</strong>
-				<strong>Kroger, Holt, MI</strong>
+				<strong>Harris Teeter, Williamsburg VA</strong><br />
+				<strong>Kroger, Holt, MI</strong><br />
 				<em>April 2025&ndash;Present</em>
 
 				<h3>Store Manager</h3>
-				<strong>The Peanut Shop of Williamsburg, Williamsburg VA</strong>
+				<strong>The Peanut Shop of Williamsburg, Williamsburg VA</strong><br />
 				<em>May 2024&ndash;March 2025</em>
 
 				<h3>Store Manager, Regional Manager</h3>
-				<strong>Galena Garlic Company, Galena IL</strong>
+				<strong>Galena Garlic Company, Galena IL</strong><br />
 				<em>June 2018&ndash;February 2021</em>
 
 				<h3>Self-employed Business Services Provider</h3>
-				<strong>Crowing Ram</strong> <em>January 2010&ndash;January 2017</em>
+				<strong>Crowing Ram</strong><br />
+				<em>January 2010&ndash;January 2017</em>
 				<p>
 					<a
 						href="https://web.archive.org/web/20110304145558/http://www.crowingram.com/"
