Add zero-width non-joiners to URL strings

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</p>
 				<p>
 					<a href="https://www.linkedin.com/in/mrwaldrop">[Linkedin Profile]</a
-					><span>(https://www.linkedin.com/in/mrwaldrop)</span>
+					><span>(https://www.linkedin.com/&zwnj;in/&zwnj;mrwaldrop)</span>
 				</p>
 
 				<summary>
@@ -187,7 +187,7 @@
 						target="external"
 						>[Site at the time of departure]</a
 					><span
-						>(https://web.archive.org/web/20180605100948/https://www.deere.com/en/)</span
+						>(https://web.archive.org/web/&zwnj;20180605100948/&zwnj;https://&zwnj;www.deere.com/&zwnj;en/)</span
 					>
 				</p>
 
@@ -217,7 +217,7 @@
 				<p>
 					<a href="/fiberwild-ideas.html" target="external"
 						>[Site at the time of departure]</a
-					><span>(https://www.mattwaldrop.com/fiberwild-ideas.html)</span>
+					><span>(https://www.mattwaldrop.com/&zwnj;fiberwild-ideas.html)</span>
 				</p>
 				<p>
 					<strong>Note:</strong> This page was pulled from Wayback Machine for
@@ -237,7 +237,7 @@
 						target="external"
 						>[Site at the time of departure]</a
 					><span
-						>(https://web.archive.org/web/20161012003147/http://www.fiberwild.com/index.php)</span
+						>(https://web.archive.org/&zwnj;web/&zwnj;20161012003147/&zwnj;http://www.&zwnj;fiberwild.&zwnj;com/&zwnj;index.php)</span
 					>
 				</p>
 
@@ -283,7 +283,7 @@
 				<p>
 					<a href="https://github.com/crowingram/threadbear" target="external"
 						>[Code]</a
-					><span>(https://github.com/crowingram/threadbear)</span>
+					><span>(https://github.com/&zwnj;crowingram/&zwnj;threadbear)</span>
 				</p>
 
 				<h3>Front-End Team Lead (Web Initiative 2000 project)</h3>
@@ -311,7 +311,7 @@
 						target="external"
 						>[Site at the time of departure]</a
 					><span
-						>(https://web.archive.org/web/20020927112704/http://www.jnl.com/)</span
+						>(https://web.archive.org/&zwnj;web/&zwnj;20020927112704/&zwnj;http://www.&zwnj;jnl.&zwnj;com/)</span
 					>
 				</p>
 
@@ -339,7 +339,7 @@
 						target="external"
 						>[Site at the time of departure]</a
 					><span
-						>(https://web.archive.org/web/20110304145558/http://www.crowingram.com/)</span
+						>(https://web.archive.org/&zwnj;web/&zwnj;20110304145558/&zwnj;http://www.&zwnj;crowingram.&zwnj;com/)</span
 					>
 				</p>
 
