Add zero-width non-joiner to Visit Greater Palm Springs

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<p>
 					<a href="https://www.visitgreaterpalmsprings.com/" target="external"
 						>[Visit Greater Palm Springs, site my team supported]</a
-					><span>(https://www.visitgreaterpalmsprings.com/)</span>
+					><span>(https://www.&zwnj;visitgreaterpalmsprings.&zwnj;com/)</span>
 				</p>
 				<p>
 					<a href="https://www.iloveny.com/" target="external"
