ZWNJs not working after dots - remove them

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<p>
 					<a href="https://www.visitgreaterpalmsprings.com/" target="external"
 						>[Visit Greater Palm Springs, site my team supported]</a
-					><span>(https://www.&zwnj;visitgreaterpalmsprings.&zwnj;com/)</span>
+					><span>(https://&zwnj;www.visitgreaterpalmsprings.com/)</span>
 				</p>
 				<p>
 					<a href="https://www.iloveny.com/" target="external"
@@ -187,7 +187,7 @@
 						target="external"
 						>[Site at the time of departure]</a
 					><span
-						>(https://web.archive.org/web/&zwnj;20180605100948/&zwnj;https://&zwnj;www.&zwnj;deere.&zwnj;com/&zwnj;en/)</span
+						>(https://web.archive.org/web/&zwnj;20180605100948/&zwnj;https://&zwnj;www.deere.com/&zwnj;en/)</span
 					>
 				</p>
 
