Add ZWNJ to projects Absolut Elyx

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
 					Original site by
 					<a href="https://www.groovecommerce.com/work/absolut-elyx-1/"
 						>[Groove Commerce]</a
-					><span>(https://www.groovecommerce.com/work/absolut-elyx-1/)</span>
+					><span>(https://&zwnj;www.groovecommerce.com/&zwnj;work/&zwnj;absolut-elyx-1/)</span>
 				</p>
 				<p><strong>Status:</strong> Adaptive hero section complete.</p>
 				<p>
