Convert all target windows to "external"

--- a/colophon.html
+++ b/colophon.html
@@ -46,14 +46,20 @@
 					<li><strong>CSS3 / SCSS</strong></li>
 					<li><strong>JavaScript / ES6</strong></li>
 					<li><strong>PHP</strong> (Referenced in legacy projects)</li>
-					<li><strong>WordPress / Drupal</strong> (Professional experience context)</li>
+					<li>
+						<strong>WordPress / Drupal</strong> (Professional experience
+						context)
+					</li>
 					<li><strong>Git / GitHub</strong> for version control</li>
-					<li><strong>Font + Icon Services</strong> Adobe TypeKit, Google Fonts</li>
+					<li>
+						<strong>Font + Icon Services</strong> Adobe TypeKit, Google Fonts
+					</li>
 				</ul>
 
 				<h2>Deployment</h2>
 				<p>
-					This site is deployed on DreamHost using manual Git-based deployment over SSH.
+					This site is deployed on DreamHost using manual Git-based deployment
+					over SSH.
 				</p>
 
 				<h2>Features</h2>
@@ -71,7 +77,7 @@
 					<a href="mailto:matt.waldrop@me.com">matt.waldrop@me.com</a>
 				</p>
 				<p>
-					<a href="tel:tel:+18152812717">815-281-2717</a>
+					<a href="tel:+18152812717">815-281-2717</a>
 				</p>
 			</div>
 		</main>
