--- a/projects.html
+++ b/projects.html
@@ -47,39 +47,43 @@
 				<h3>Current Projects</h3>
 				<h4>
 					Clone of
-					<a href="https://www.absolutelyx.com" target="braham"
+					<a href="https://www.absolutelyx.com" target="external"
 						>[Absolut Elyx]</a
 					><span>(https://www.absolutelyx.com)</span>
 				</h4>
 				<p>
 					Original site by
-					<a href="https://www.groovecommerce.com/work/absolut-elyx-1/"
+					<a
+						href="https://www.groovecommerce.com/work/absolut-elyx-1/"
+						target="external"
 						>[Groove Commerce]</a
-					><span>(https://&zwnj;www.groovecommerce.com/&zwnj;work/&zwnj;absolut-elyx-1/)</span>
+					><span
+						>(https://&zwnj;www.groovecommerce.com/&zwnj;work/&zwnj;absolut-elyx-1/)</span
+					>
 				</p>
 				<p><strong>Status:</strong> Adaptive hero section complete.</p>
 				<p>
 					Ongoing project live site at
-					<a href="https://jovial-bhaskara-1d3d91.netlify.app/" target="braham2"
+					<a href="https://jovial-bhaskara-1d3d91.netlify.app/" target="external"
 						>[https://jovial-bhaskara-1d3d91.netlify.app/]</a
 					>.
 				</p>
 				<p>
 					Code available at
-					<a href="https://github.com/crowingram/study-absolut" target="braham"
+					<a href="https://github.com/crowingram/study-absolut" target="external"
 						>[https://github.com/crowingram/study-absolut]</a
 					>.
 				</p>
 
 				<h3>Prior Projects</h3>
 				<h4>
-					Clone of <a href="https://www.tesla.com/">[Tesla]</a
+					Clone of <a href="https://www.tesla.com/" target="external">[Tesla]</a
 					><span>(https://www.tesla.com/)</span>
 				</h4>
 				<p>
 					Follow-along of a superficial replication of the Tesla front page by
 					Clever Programmer (i.e., not my original work) on YouTube at
-					<a href="https://youtu.be/0mVbNp1ol_w" target="braham2"
+					<a href="https://youtu.be/0mVbNp1ol_w" target="external"
 						>[https://youtu.be/0mVbNp1ol_w].</a
 					>
 				</p>
@@ -90,14 +94,14 @@
 					Live site at
 					<a
 						href="https://distracted-ardinghelli-4bf536.netlify.app/"
-						target="braham2"
+						target="external"
 						>[https://distracted-ardinghelli-4bf536.netlify.app/]</a
 					>.
 				</p>
 				<p>
 					Code available at
 					<a
-						href="https://github.com/crowingram/study-tesla-clone"
+						href="ctrl ://github.com/crowingram/study-tesla-clone"
 						target="braham"
 						>[https://github.com/crowingram/study-tesla-clone]</a
 					>.
