Revise React project description and year
Updated project details for React development section.

--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,11 @@
 				<h1>Personal Projects</h1>
 
 				<h2>REACT DEVELOPMENT</h2>
-				<strong>Self-taught</strong> <em>2021</em>
-				<p>Currently studying and building site clones.</p>
+				<strong>Self-taught</strong> <em>2022</em>
+				<p>Built React + Next.js + TypeScript app that consumes the Marvel Comics API and presents
+				comics by specific creators or featuring specific characters. Project designed and reviewed
+				by Simpleview supervisors as prep for upcoming stack migration.</p>
+				<p><a href="" target="external">[GitHub Repository]</a><span>(https://github.com/crowingram/cms-react-training)</span></p>
 
 				<h3>Current Projects</h3>
 				<h4>
