--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -42,10 +42,19 @@
 
 				<h2>REACT DEVELOPMENT</h2>
 				<strong>Self-taught</strong> <em>2022</em>
-				<p>Built React + Next.js + TypeScript app that consumes the Marvel Comics API and presents
-				comics by specific creators or featuring specific characters. Project designed and reviewed
-				by Simpleview supervisors as prep for upcoming stack migration.</p>
-				<p><a href="" target="external">[GitHub Repository]</a><span>(https://github.com/crowingram/cms-react-training)</span></p>
+				<p>
+					Built React + Next.js + TypeScript app that consumes the Marvel Comics
+					API and presents comics by specific creators or featuring specific
+					characters. Project designed and reviewed by Simpleview supervisors as
+					prep for upcoming stack migration.
+				</p>
+				<p>
+					<a
+						href="https://github.com/crowingram/cms-react-training"
+						target="external"
+						>[GitHub Repository]</a
+					><span>(https://github.com/crowingram/cms-react-training)</span>
+				</p>
 
 				<h3>Current Projects</h3>
 				<h4>
@@ -67,13 +76,17 @@
 				<p><strong>Status:</strong> Adaptive hero section complete.</p>
 				<p>
 					Ongoing project live site at
-					<a href="https://jovial-bhaskara-1d3d91.netlify.app/" target="external"
+					<a
+						href="https://jovial-bhaskara-1d3d91.netlify.app/"
+						target="external"
 						>[https://jovial-bhaskara-1d3d91.netlify.app/]</a
 					>.
 				</p>
 				<p>
 					Code available at
-					<a href="https://github.com/crowingram/study-absolut" target="external"
+					<a
+						href="https://github.com/crowingram/study-absolut"
+						target="external"
 						>[https://github.com/crowingram/study-absolut]</a
 					>.
 				</p>
