Add note re Marvel API removal

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,8 @@
 					Built React + Next.js + TypeScript app that consumes the Marvel Comics
 					API and presents comics by specific creators or featuring specific
 					characters. Project designed and reviewed by Simpleview supervisors as
-					prep for upcoming stack migration.
+					prep for upcoming stack migration. ETA: Marvel Comics API no longer
+					available. Project archived and code available at:
 				</p>
 				<p>
 					<a
